# game_of_life

./: CMakeLists.txt  build_shaders.sh  cuda_gol.cu  cuda_gol.h  main.cu  render_app.cpp  render_app.hpp  renderer.cpp  renderer.hpp
cmake/: test.cu  v3.cu
